--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,6 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'com.alibaba:arouter-api:1.3.1'
     annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
